@@ -34,6 +34,7 @@
   *  - Fixed ClassDriver AudioOutput device demo not selecting an audio output mode
   *  - Fixed incorrect SampleFrequencyType value in the AudioInput and AudioOutput ClassDriver demos' descriptors
   *  - Fixed incorrect event name rule in demo/project/bootloader makefiles
+  *  - Fixed HID device class driver not reselecting the correct endpoint once the user callback routines have been called
   *
   *  \section Sec_ChangeLog090924 Version 090924
   *
